Update price, update info, & fix font sizes
Price changed from $35 to $40. Removed health care facilities. Updated WeRPN. Fixed font sizes overlapping picture.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2255,7 +2255,7 @@ input, select, textarea {
 		/* Basic */
 
 			body, input, textarea, select {
-				font-size: 17pt;
+				font-size: 15pt;
 			}
 
 		/* Header */
@@ -2376,7 +2376,7 @@ input, select, textarea {
 			}
 
 			body, input, textarea, select {
-				font-size: 16pt;
+				font-size: 13pt;
 			}
 
 			header br {
@@ -2559,7 +2559,7 @@ input, select, textarea {
 		/* Basic */
 
 			body, input, textarea, select {
-				font-size: 14pt;
+				font-size: 12pt;
 			}
 
 			h2 {
